--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,15 @@ readme = "README.md"
 packages = [{include = "portal_sspk"}]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.10"
 django = "^4.1.5"
 python-dotenv = "^0.21.0"
 
+
+[tool.poetry.group.dev.dependencies]
+flake8 = "^6.0.0"
+isort = "^5.11.4"
+ipython = "^8.8.0"
 
 [build-system]
 requires = ["poetry-core"]
