--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ packages = [{include = "portal_sspk"}]
 python = "^3.11"
 django = "^4.1.5"
 python-dotenv = "^0.21.0"
+django-phonenumber-field = "^7.0.2"
+phonenumbers = "^8.13.4"
 
 
 [build-system]
