--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["s.leontev <neonyan15@gmail.com>"]
 readme = "README.md"
-packages = [{include = "portal_sspk"}]
+packages = [{ include = "portal_sspk" }]
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -12,6 +12,9 @@ django = "^4.1.5"
 python-dotenv = "^0.21.0"
 django-phonenumber-field = "^7.0.2"
 phonenumbers = "^8.13.4"
+requests = "^2.28.2"
+django-polymorphic = "^3.1.0"
+pillow = "^9.4.0"
 
 
 [tool.poetry.group.dev.dependencies]
