--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ phonenumbers = "^8.13.4"
 requests = "^2.28.2"
 django-polymorphic = "^3.1.0"
 pillow = "^9.4.0"
+redis = "^4.4.2"
+celery = "^5.2.7"
 
 
 [tool.poetry.group.dev.dependencies]
