--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ django-polymorphic = "^3.1.0"
 pillow = "^9.4.0"
 redis = "^4.4.2"
 celery = "^5.2.7"
+djangorestframework = "^3.14.0"
+psycopg2-binary = "^2.9.5"
 
 
 [tool.poetry.group.dev.dependencies]
