--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ celery = "^5.2.7"
 djangorestframework = "^3.14.0"
 psycopg2-binary = "^2.9.5"
 pandas = "^1.5.2"
+gunicorn = "^20.1.0"
+whitenoise = "^6.3.0"
 
 
 [tool.poetry.group.dev.dependencies]
