--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ psycopg2-binary = "^2.9.5"
 pandas = "^1.5.2"
 gunicorn = "^20.1.0"
 whitenoise = "^6.3.0"
+xlsxwriter = "^3.0.7"
 
 
 [tool.poetry.group.dev.dependencies]
