--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pandas = "^1.5.2"
 gunicorn = "^20.1.0"
 whitenoise = "^6.3.0"
 xlsxwriter = "^3.0.7"
+djangorestframework-simplejwt = "^5.2.2"
 
 
 [tool.poetry.group.dev.dependencies]
