--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ gunicorn = "^20.1.0"
 whitenoise = "^6.3.0"
 xlsxwriter = "^3.0.7"
 djangorestframework-simplejwt = "^5.2.2"
+django-rest-polymorphic = "^0.1.10"
 
 
 [tool.poetry.group.dev.dependencies]
