--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,6 @@ packages = [{ include = "portal_sspk" }]
 [tool.poetry.dependencies]
 python = "^3.10"
 django = "^4.1.5"
-python-dotenv = "^0.21.0"
 django-phonenumber-field = "^7.0.2"
 phonenumbers = "^8.13.4"
 requests = "^2.28.2"
@@ -26,12 +25,17 @@ xlsxwriter = "^3.0.7"
 djangorestframework-simplejwt = "^5.2.2"
 django-rest-polymorphic = "^0.1.10"
 drf-spectacular = "^0.25.1"
+django-environ = "^0.10.0"
 
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
 isort = "^5.11.4"
 ipython = "^8.8.0"
+pytest = "^7.2.2"
+pytest-django = "^4.5.2"
+pytest-factoryboy = "^2.5.1"
+pytest-cov = "^4.0.0"
 
 [build-system]
 requires = ["poetry-core"]
