--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ factories = "^1.2.0"
 pytest = "^7.2.2"
 pytest-redis = "^3.0.1"
 pytest-mock = "^3.10.0"
+django-cors-headers = "^3.14.0"
 
 
 [tool.poetry.group.dev.dependencies]
